@@ -465,4 +465,11 @@
       permission="cmf.ManagePortal"
       />
 
+  <browser:page
+      name="openerp-settings"
+      for="Products.CMFPlone.interfaces.IPloneSiteRoot"
+      class="vnccollab.theme.settings.OpenERPSettingsControlPanel"
+      permission="cmf.ManagePortal"
+      />
+
 </configure>
